[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://Sprites/GameOver.png" type="Texture" id=2]
[ext_resource path="res://GameOverScene.gd" type="Script" id=3]

[node name="GameOverScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 320.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 88.0
margin_top = 70.0
margin_right = 231.0
margin_bottom = 250.0

[node name="GameOver" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_right = 143.0
margin_bottom = 84.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="ScoreCtn" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 143.0
margin_bottom = 108.0

[node name="Score" type="Label" parent="CenterContainer/VBoxContainer/ScoreCtn"]
margin_right = 143.0
margin_bottom = 14.0
text = "Fuel Units Gathered: 69"
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 143.0
margin_bottom = 144.0

[node name="PlayAgain" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 35.0
margin_right = 107.0
margin_bottom = 26.0
theme = ExtResource( 1 )
text = "Play Again"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 143.0
margin_bottom = 180.0

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 35.0
margin_right = 108.0
margin_bottom = 26.0
theme = ExtResource( 1 )
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/MainMenu" to="." method="_on_MainMenu_pressed"]
